details moved a bit down to avoid overlapping the title

--- a/site/css/style.css
+++ b/site/css/style.css
@@ -104,23 +104,25 @@ header {
 	position: absolute;
 	left:30px;
     pointer-events:none;
+    z-index: 5;
 }
 
 #details {
 	position: absolute;
-	right:30px; top:25px;
+	right:30px; top:85px;
     pointer-events:none;
     color:white;
     text-align: right;
 }
 #details .sub {  }
 #details .country, h2 {
-    color:#00b48f; font-size:40px;
+    color:#00b48f; font-size:25pt;
     text-rendering: optimizeLegibility; /* proper kerning for the word Total */
     display:inline-block;
     margin-right: 10px;
     margin-bottom:5px;
 }
+#details .country { z-index:11 !important; background-color: #111; height: 1em; }
 #details .year { color:#999; font-size:25pt; margin-bottom:10px; }
 #details .remittances {  display:inline; font-size:14pt; color:white;}
 #details .remittancesComment { margin-top:3px; display:block; font-size:8pt; color:#999;}
